@@ -176,6 +176,8 @@ MediaWiki supports over 330 languages. Many localisations are updated
 regularly. Below only new and removed languages are listed, as well as
 changes to languages because of Bugzilla reports.
 
+* (bug 17160) Gender specific display text for User namespace
+
 == Compatibility ==
 
 MediaWiki 1.18 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer
